<resources>
    <string name="app_name">LifeHope Health</string>
    <string name="answer_call_button_text">Answer</string>
    <string name="hang_up_button_text">Decline</string>
    <string name="agora_app_id">f45a221c4dbf4313bfe720fd4f424293</string>
    <string name="agora_access_token">006f45a221c4dbf4313bfe720fd4f424293IAANYhjWm45H0xFlAEt00kPehVwrKUrMr8SbA2LhSiQHxPAJJegAAAAAEADri2/QDJG9YQEAAQALkb1h</string>
    <string name="home_desc">Now abide these, faith, hope &amp; love but the greatest of these is Love.\n&#160;&#160;1 Cor 13:13&#160;&#160;</string>
    <string name="trans_tool_bar_title">trans_tool_bar</string>
    <string name="button_sign_up">Sign Up / Sign In</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_share">Share</string>
    <string name="button_save">Save</string>
    <string name="button_skip">Skip</string>
    <string name="button_verify">Verify</string>
    <string name="button_proceed">Proceed</string>
    <string name="button_yes">Yes</string>
    <string name="button_edit">Edit</string>
    <string name="button_add">Add</string>
    <string name="button_upload">Upload</string>
    <string name="button_submit">Submit</string>
    <string name="button_change_address">Save Address</string>
    <string name="button_confirm_scheduling">Proceed to Confirm Schedule</string>
    <string name="button_manual_Feed">Manual Feed</string>
    <string name="button_fit_band_Feed">Pair Fit Band</string>
    <string name="button_share_report">Share Report</string>
    <string name="button_share_oxygen">Share SPO2 Report</string>
    <string name="button_apply_filter">Apply Filter</string>
    <string name="button_previous">Previous</string>
    <string name="button_ok">Okay</string>
    <string name="button_resend">Resend Again</string>
    <string name="button_book_an_appointment">Book an appointment</string>
    <string name="text_privacy_policy">By proceeding you agree to our T&amp;C and Privacy Policy</string>
    <string name="text_social_media">Or</string>
    <string name="text_question"> Questionnaire</string>
    <string name="text_blood_glucose_label">Blood Glucose Level</string>
    <string name="text_mal_time_label">Meal Time</string>
    <string name="text_history_title">Diagnosis History</string>
    <string name="text_vaccine_report">Vaccination Report</string>
    <string name="text_history">History</string>
    <string name="text_mail_content">We have sent your username and password to: \njohn.xyzcompany.com</string>
    <string name="text_mail_info">Check your email</string>
    <string name="text_start_date">Start Date</string>
    <string name="text_end_date">End Date</string>
    <string name="text_mobile_number">Mobile number</string>
    <string name="text_firstname">First name *</string>
    <string name="text_lastname">Last name *</string>
    <string name="text_gender">Gender *</string>
    <string name="text_dob">Date of birth *</string>
    <string name="text_email">Email </string>
    <string name="text_mobile">Mobile number *</string>
    <string name="text_weight">Weight (lbs)*</string>
    <string name="text_height">Height (ft) *</string>
    <string name="text_height_inch">inch</string>
    <string name="text_height_feet">Feet</string>
    <string name="text_select_dates">Select Dates</string>
    <string name="text_blood">Blood Group </string>
    <string name="text_address">Address</string>
    <string name="text_address_">Address *</string>
    <string name="text_name">Name *</string>
    <string name="text_age">Age *</string>
    <string name="text_report_name">Remarks *</string>
    <string name="text_body_temp">Body Temperature (°F)</string>
    <string name="text_spo2">Oxygen Level (SpO2 - %)</string>
    <string name="text_ecg">Weight (lbs)</string>
    <string name="text_bp">Blood Pressure (SYS / DIA)</string>
    <string name="text_bpm">Heart Rate (BPM)</string>
    <string name="text_optional">Optional</string>
    <string name="text_enter_concerns">Enter your concerns if any:</string>
    <string name="text_diagnosis">Diagnosis Result</string>
    <string name="text_sign_up_heading">Join LifeHope Health™, the fastest way to track, test &amp; report your family’s health to keep everyone healthy, happy and blessed.</string>
    <string name="text_enter_mobile_number">Enter your mobile number to \nLogin or Sign up</string>
    <string name="text_detect_mobile_number">Verification code has been sent to\n</string>
    <string name="text_enter_verification_code">Enter 6 digit sms verification code</string>
    <string name="text_resend_code">Didn\'t receive the code? Resend code</string>
    <string name="text_change">Change</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_verify_mobile">Please verify your \nmobile number to proceed</string>
    <string name="text_check_mobile">Is your mobile number \nabove correct?</string>
    <string name="text_heading">NUMBER CONFIRMATION: \n</string>
    <string name="text_body_temp_label">°F</string>
    <string name="text_email_verification">Email Verification</string>
    <string name="text_body_temp_text_label">Temperature</string>
    <string name="text_oxygen_level_label">%</string>
    <string name="text_oxygen_level_text_label">Oxygen Level</string>
    <string name="text_weight_label">lbs</string>
    <string name="text_weight_text_label">Weight</string>
    <string name="text_heart_rate_label">BPM</string>
    <string name="text_heart_rate_text_label">Heart Rate</string>
    <string name="text_systolic_label">Systolic</string>
    <string name="text_glucose_label">mg/dL</string>
    <string name="text_glucose_text_label">Blood Glucose</string>
    <string name="text_diastolic_label">Diastolic</string>
    <string name="text_basic_info">Basic Information</string>
    <string name="text_medical_info">Medical Information</string>
    <string name="text_user_name">Mark Johanson</string>
    <string name="text_done">Done</string>
    <string name="text_meal_type">Meal Type</string>
    <string name="text_user_age">70 Years,Male</string>
    <string name="text_profile_settings">Profile Settings</string>
    <string name="text_profile_information">Profile Information</string>
    <string name="text_doctor_detail">Physician Details</string>
    <string name="text_about">Please describe your health issues *</string>
    <string name="text_booking_details">Booking Details</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_detail">Detail Page</string>
    <string name="text_book_now">Order Now</string>
    <string name="text_self_test">Self Test</string>
    <string name="text_home_test">In-Home Test</string>
    <string name="text_info">Our physician visits your home for a test</string>
    <string name="text_self_info">Test Kit will be sent to your address</string>
    <string name="text_select_date_time">Select Date &amp; Time</string>
    <string name="text_time_label">Time</string>
    <string name="text_myprofile_mobile">Mobile</string>
    <string name="toast_enter_mobile">Enter Correct Mobile Number</string>
    <string name="text_myprofile_email">Email</string>
    <string name="text_enter_email">Please enter the email address</string>
    <string name="text_enter_email_validation">Enter Valid Email</string>
    <string name="text_myprofile_address">Address</string>
    <string name="text_myprofile_height">Height</string>
    <string name="text_myprofile_weight">Weight</string>
    <string name="text_sys_label">mmHg</string>
    <string name="text_myprofile_blood">Blood Group</string>
    <string name="text_test_details">Test Details</string>
    <string name="text_primary_diagnosis">Symptom Analysis</string>
    <string name="text_Recommended">Recommended Tests</string>
    <string name="text_diagnosis_measure">Symptom Severity</string>
    <string name="text_concerns">Patient concerns</string>
    <string name="text_result_message">You have completed your today\'s quick health checkup</string>
    <string name="text_payment_label">Test Order Placed \nSuccessfully!</string>
    <string name="text_test_heading">19 PCR Test</string>
    <string name="text_no_data">No Data Found</string>
    <string name="text_no_test_result">No Test Order Data Found</string>
    <string name="text_no_diagnosis_history">There is no diagnosis history</string>
    <string name="text_no_symptom_history">No Diagnosis History Data Found</string>
    <string name="test_kit">Test Kit</string>
    <string name="text_add_members_label">Add-on Members (Family or Co-workers)</string>
    <string name="text_test_description">The 19 RT-PCR test is a real-time reverse transcription polymerase chain reaction.</string>
    <string name="text_morning">AM</string>
    <string name="text_evening">PM</string>
    <string name="self_diagnosis">Self Diagnosis</string>
    <string name="text_contact_details">Contact Details</string>
    <string name="text_payment_details">Payment Details</string>
    <string name="text_proceed_to_pay">Proceed to Pay</string>
    <string name="text_offer">Up to 50% Off</string>
    <string name="text_book_an_appointment">Book an appointment</string>
    <string name="text_total_cost">Total cost for people tested</string>
    <string name="text_total_cost_monthly">Total cost for monthly</string>
    <string name="text_total_cost_surface">Total cost for surfaces tested</string>
    <string name="text_total_monthly_test_people">Total monthly tests for people : </string>
    <string name="text_total_monthly_test_surface">Total monthly tests for surfaces : </string>
    <string name="text_lab_test_with_family">Book Lab Test with \nYour Family</string>
    <string name="text_add_members">Add-on Members (Family or Co-workers)</string>
    <string name="text_schedule_txt">Scheduled Date &amp; Time&#160;:&#160;</string>
    <string name="text_price">Price: $ </string>
    <string name="text_order_id">Order ID: </string>
    <string name="toast_booking_terms">You should agree with our terms &amp; conditions to order a test</string>
    <string name="toast_bulk_booking_terms">You should agree with our terms &amp; conditions to order a bulk booking test</string>
    <string name="text_pending">Pending</string>
    <string name="text_complete">Completed</string>
    <string name="text_cost_per_surface">(Cost per surface test: $5)</string>
    <string name="text_cost_per_person">(Cost per test per person: $10)</string>
    <string name="text_refunded">Refunded</string>
    <string name="search_hint">Search with doctor name</string>
    <string name="text_no_test_data">There are no lab results</string>
    <string name="text_no_vitals_data">No Vitals Data Found</string>
    <string name="text_declined">Declined</string>
    <string name="text_inprogress">In-progress</string>
    <string name="text_approved">Approved</string>
    <string name="text_rejected">Rejected</string>
    <string name="text_corporate_mail">Kindly enter your corporate \nemail address</string>
    <string name="text_email_">Email *</string>
    <string name="cancel">Cancel</string>
    <string name="my_test_orders">My Test Orders</string>
    <string name="contact_support">Contact Support</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="online_appointment">Online Appointment</string>
    <string name="lifehope_will_provide_you_24_hours_available_doctor_to_help_you_have_better_health">LifeHope will provide you 24 hours available physician to help you have better health</string>
    <string name="select_the_specialist_and_make_an_appointment_through_our_app">Select the specialist and make an appointment through our app!</string>
    <string name="get_started">Get Started</string>
</resources>