<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_my_test_orders"
            android:icon="@drawable/ic_my_order_icon"
            android:title="@string/my_test_orders" />
        <item
            android:id="@+id/nav_contact_support"
            android:icon="@drawable/ic_contact_support_icon"
            android:title="@string/contact_support" />
        <item
            android:id="@+id/nav_term_cons"
            android:icon="@drawable/ic_t_c_icon"
            android:title="@string/terms_conditions" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy_icon"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_icon"
            android:title="@string/logout" />
    </group>
</menu>