<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Appointments.IntroActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/online_appointment"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_25"
            android:gravity="center_horizontal"
            android:text="@string/lifehope_will_provide_you_24_hours_available_doctor_to_help_you_have_better_health"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/text_15" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_25"
            android:gravity="center_horizontal"
            android:text="@string/select_the_specialist_and_make_an_appointment_through_our_app"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/text_15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_15"
            android:background="@drawable/divider_button_border"
            android:gravity="center"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15" />

    </LinearLayout>
</RelativeLayout>