<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_theme_bg"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/text_height_feet"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/text_height_inch"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/feetValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:orientation="vertical" />

            <NumberPicker
                android:id="@+id/inchValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_weight="0.5"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/buttonProceed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_done"
                    android:textColor="@color/share_border" />

                <View
                    android:visibility="gone"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:visibility="gone"
                    android:layout_height="@dimen/margin_50"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/share_border" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton

                android:layout_width="0dp"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_40"
                android:layout_weight="1"
                android:background="@drawable/divider_button_line_border"
                android:gravity="center"
                android:text="@string/button_cancel" />

            <androidx.appcompat.widget.AppCompatButton

                android:layout_width="0dp"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_40"
                android:layout_weight="1"
                android:background="@drawable/divider_button_border"
                android:gravity="center"
                android:text="@string/button_proceed"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>