<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email_sent"
        app:layout_constraintBottom_toTopOf="@+id/textViewMailInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMailInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:lineSpacingExtra="5.5sp"
        android:text="@string/text_mail_info"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewMailContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMailContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_40"
        android:gravity="center"
        android:lineSpacingExtra="5.5sp"
        android:text="@string/text_mail_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOkay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/button_theme_bg"
        android:gravity="center"
        android:text="@string/button_ok"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewMailContent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/divider_button_line_border"
        android:gravity="center"
        android:text="@string/button_resend"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/buttonOkay" />
</androidx.constraintlayout.widget.ConstraintLayout>