<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    android:background="@drawable/alert_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_15"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:text="@string/text_corporate_mail"
        android:textSize="@dimen/text_15"
        app:layout_constraintTop_toBottomOf="@+id/textview_header" />

    <FrameLayout
        android:id="@+id/frm_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:textColorHint="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@+id/textview_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz!#$%'*+-/=?^_`{|}~1234567890().,:;@[\]&amp;"
                android:hint="@string/text_email_"
                android:background="@color/white"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:maxLength="80"
                android:paddingRight="@dimen/margin_20"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/email_clear"
            android:layout_width="@dimen/margin_20"
            android:layout_height="@dimen/margin_20"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_close_icon"
            android:visibility="visible" />
    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_40"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/divider_button_line_border"
        android:gravity="center"
        android:text="@string/button_cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button_proceed"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_lay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_40"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_40"
        android:background="@drawable/divider_button_border"
        android:gravity="center"
        android:text="@string/button_verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/frm_lay" />
</androidx.constraintlayout.widget.ConstraintLayout>